[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Misc/Quicksand-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/2_Lobby/Back_Button.gd" type="Script" id=2]
[ext_resource path="res://Scripts/2_Lobby/Start_Button.gd" type="Script" id=4]
[ext_resource path="res://Scripts/2_Lobby/My_IP_Button.gd" type="Script" id=5]
[ext_resource path="res://Scripts/2_Lobby/Game_Players.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.960784, 0.945098, 0.929412, 1 )
draw_center = false
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=2]
size = 90
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 40.0
content_margin_right = 40.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.960784, 0.945098, 0.929412, 1 )
draw_center = false
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 1, 0, 0.301961, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=4]
size = 60
outline_color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 40.0
content_margin_right = 40.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.960784, 0.945098, 0.929412, 1 )
draw_center = false
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0, 0.529412, 0.317647, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.882353, 0.882353, 0.87451, 1 )
draw_center = false
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0, 0.894118, 0.211765, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color( 0.952941, 0.843137, 0.329412, 1 )

[sub_resource type="StyleBoxFlat" id=16]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.882353, 0.882353, 0.87451, 1 )
draw_center = false
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0, 0.529412, 0.317647, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color( 0.952941, 0.843137, 0.329412, 0 )

[sub_resource type="DynamicFont" id=10]
size = 90
outline_size = 5
outline_color = Color( 0, 0.529412, 0.317647, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.882353, 0.882353, 0.87451, 1 )
draw_center = false
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 1, 0.92549, 0.152941, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.882353, 0.882353, 0.87451, 1 )
draw_center = false
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 1, 0.639216, 0, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=14]
size = 90
outline_size = 5
outline_color = Color( 1, 0.639216, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.960784, 0.945098, 0.929412, 1 )
draw_center = false
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0.760784, 0.764706, 0.780392, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color( 0.952941, 0.843137, 0.329412, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.960784, 0.945098, 0.929412, 1 )
draw_center = false
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color( 0.952941, 0.843137, 0.329412, 1 )

[sub_resource type="DynamicFont" id=19]
size = 90
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Lobby" type="HBoxContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1910.0
margin_bottom = 1070.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Information" type="VBoxContainer" parent="."]
margin_right = 1520.0
margin_bottom = 1060.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="LineEdit" parent="Information"]
visible = false
margin_right = 1520.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 160 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/selection_color = Color( 0.760784, 0.764706, 0.780392, 0.235294 )
custom_colors/cursor_color = Color( 0.760784, 0.764706, 0.780392, 0.392157 )
custom_colors/font_color_selected = Color( 0.113725, 0.168627, 0.32549, 1 )
custom_colors/font_color = Color( 0.113725, 0.168627, 0.32549, 1 )
custom_colors/font_color_uneditable = Color( 0.113725, 0.168627, 0.32549, 1 )
align = 1
max_length = 255
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UPNP_Bad" type="Label" parent="Information"]
visible = false
margin_top = 179.0
margin_right = 1520.0
margin_bottom = 379.0
rect_min_size = Vector2( 0, 200 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Could not forward port with UPNP.
Please forward UDP ports 30000-33000."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UPNP_Good" type="Label" parent="Information"]
visible = false
margin_top = 399.0
margin_right = 1520.0
margin_bottom = 599.0
rect_min_size = Vector2( 0, 200 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Port forwarded with UPNP. If connection does not work, forward UDP ports 30000-33000."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_Players" type="Container" parent="Information"]
margin_right = 1520.0
margin_bottom = 1060.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="VBoxContainer" parent="."]
margin_left = 1540.0
margin_right = 1900.0
margin_bottom = 1060.0
rect_min_size = Vector2( 360, 0 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Controls"]
margin_right = 360.0
margin_bottom = 437.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 450, 210 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = SubResource( 16 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_disabled = Color( 0, 0.894118, 0.211765, 1 )
custom_colors/font_color = Color( 0, 0.894118, 0.211765, 1 )
custom_colors/font_color_hover = Color( 0, 0.894118, 0.211765, 1 )
custom_colors/font_color_pressed = Color( 0, 0.894118, 0.211765, 1 )
action_mode = 0
text = "start"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_Timer" type="Timer" parent="Controls/Start"]
one_shot = true

[node name="Back" type="Button" parent="Controls"]
margin_top = 457.0
margin_right = 360.0
margin_bottom = 748.0
rect_pivot_offset = Vector2( 450, 210 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color_disabled = Color( 1, 0.92549, 0.152941, 1 )
custom_colors/font_color = Color( 1, 0.92549, 0.152941, 1 )
custom_colors/font_color_hover = Color( 1, 0.92549, 0.152941, 1 )
custom_colors/font_color_pressed = Color( 1, 0.92549, 0.152941, 1 )
action_mode = 0
text = "back"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="My_IP" type="Button" parent="Controls"]
margin_top = 768.0
margin_right = 360.0
margin_bottom = 1060.0
rect_pivot_offset = Vector2( 450, 210 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 18 )
custom_fonts/font = SubResource( 19 )
custom_colors/font_color_disabled = Color( 0.760784, 0.764706, 0.780392, 1 )
custom_colors/font_color = Color( 0.760784, 0.764706, 0.780392, 1 )
custom_colors/font_color_hover = Color( 0.760784, 0.764706, 0.780392, 1 )
custom_colors/font_color_pressed = Color( 0.760784, 0.764706, 0.780392, 1 )
action_mode = 0
text = "my IP"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Copy_Timer" type="Timer" parent="Controls/My_IP"]
wait_time = 0.5
one_shot = true

[node name="HTTPRequest" type="HTTPRequest" parent="Controls/My_IP"]
[connection signal="timeout" from="Controls/Start/Start_Timer" to="Controls/Start" method="_on_Timer_timeout"]
[connection signal="timeout" from="Controls/My_IP/Copy_Timer" to="Controls/My_IP" method="_on_Copy_Timer_timeout"]
[connection signal="request_completed" from="Controls/My_IP/HTTPRequest" to="Controls/My_IP" method="_on_HTTPRequest_request_completed"]
